# Nodex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package.json  pyproject.toml  test_gemini_nodex.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  publish.yml  test.yml
docs/: api_reference.md  migration_from_langgraph.md  quickstart.md  release_process.md  why_nodex.md
examples/basic_agent/: README.md  agent.py
examples/demo_showcase/: README.md  agent.py
examples/gemini_multi_agent_demo/: README.md  agent.py
examples/human_in_the_loop/: README.md  agent.py
examples/multi_node_pipeline/: README.md  agent.py
site/: index.html  styles.css
site/docs/: api.html  cli.html  getting-started.html  guide.html  middleware.html  migration.html
src/nodex/: __init__.py  app.py  decorators.py  display.py  errors.py  exceptions.py  graph.py  middleware.py  state.py  tracer.py  types.py
src/nodex/cli/: __init__.py  main.py
src/nodex/cli/commands/: __init__.py  dev.py  new.py  run.py
src/nodex/cli/templates/: .env.example  agent.py.jinja  pyproject.toml.jinja
src/nodex/testing/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_decorators.py  test_errors.py  test_middleware.py  test_state.py  test_testing_utils.py  test_tracer.py
