[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodex-ai"
version = "0.1.2"
description = "The Express.js-style developer experience for LangGraph agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Vamsi Krishna", email = "vklvl0101@gmail.com" }
]
keywords = [
    "langgraph",
    "langchain",
    "agents",
    "agentic-ai",
    "multi-agent",
    "llm",
    "ai",
    "framework",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "hatch>=1.12.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/VamsiKrishna0101/Nodex"
Documentation = "https://vamsikrishna0101.github.io/Nodex/"
Repository = "https://github.com/VamsiKrishna0101/Nodex"
"Bug Tracker" = "https://github.com/VamsiKrishna0101/Nodex/issues"
Changelog = "https://github.com/VamsiKrishna0101/Nodex/releases"

[project.scripts]
nodex = "nodex.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nodex"]

[tool.hatch.version]
path = "src/nodex/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["nodex"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/nodex",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.coverage.run]
source = ["src/nodex"]
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

